--- a/StarcNet/demo.ipynb
+++ b/StarcNet/demo.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +46,7 @@
     "import time\n",
     "import pickle\n",
     "import numpy as np\n",
+    "from numpy.linalg import norm\n",
     "\n",
     "import torch\n",
     "from torch.autograd import Variable\n",
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,20 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([2752, 5, 32, 32])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_all, _, ids = load_db(os.path.join(data_dir,'test_'+dataset+'.dat'))\n",
     "mean = np.load(os.path.join(data_dir,'mean.npy'))\n",
@@ -167,9 +157,7 @@
     "data_test = data_all - mean[np.newaxis,:,np.newaxis,np.newaxis] # subtract mean\n",
     "\n",
     "data = torch.from_numpy(data_test).float()\n",
-    "test_loader = DataLoader(TensorDataset(data), batch_size=batch_size, shuffle=False)\n",
-    "\n",
-    "data.shape"
+    "test_loader = DataLoader(TensorDataset(data), batch_size=batch_size, shuffle=False)\n"
    ]
   },
   {
@@ -181,10 +169,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def L0(x, thresh):\n",
+    "\n",
+    "    x_abs = np.abs(x)\n",
+    "\n",
+    "    x_large = np.where(x_abs>thresh)\n",
+    "\n",
+    "    y = 0\n",
+    "    for i in range(x_large.shape[0]):\n",
+    "        if i == 1:\n",
+    "            if x_large[i]==1:\n",
+    "                y = y + 1\n",
+    "        else:\n",
+    "            if x_large[i]==1 and x_large[i-1]==0:\n",
+    "                y = y + 1\n",
+    "    return y\n",
+    "\n",
+    "def entropy1D(X):\n",
+    "    e = 0\n",
+    "    for i in range(X.shape[0]):\n",
+    "        if X[i]>0:\n",
+    "            e = e - (X[i] * np.log(X[i]))\n",
+    "    return e\n",
+    "    \n",
+    "def deterministic_dist(n,mesh_v):\n",
+    "    \n",
+    "    assert n<=5\n",
+    "\n",
+    "    targets = np.zeros((n, (mesh_v.shape[0])**n))\n",
+    "    \n",
+    "    if n==1:\n",
+    "        c = 0\n",
+    "        for i1 in mesh_v:\n",
+    "            targets[:,c]=i1\n",
+    "            targets[:,c] = targets[:,c]/norm(targets[:,c],1)\n",
+    "            c = c + 1\n",
+    "    elif n==2:\n",
+    "        c = 0\n",
+    "        for i1 in mesh_v:\n",
+    "            for i2 in mesh_v:\n",
+    "                targets[:,c]=[i1, i2]\n",
+    "                targets[:,c] = targets[:,c]/norm(targets[:,c],1)\n",
+    "                c = c + 1\n",
+    "    elif n==3:\n",
+    "        c = 0\n",
+    "        for i1 in mesh_v:\n",
+    "            for i2 in mesh_v:\n",
+    "                for i3 in mesh_v:\n",
+    "                    targets[:,c]=[i1, i2, i3]\n",
+    "                    targets[:,c] = targets[:,c]/norm(targets[:,c],1)\n",
+    "                    c = c + 1\n",
+    "    elif n==4:\n",
+    "        c = 0\n",
+    "        for i1 in mesh_v:\n",
+    "            for i2 in mesh_v:\n",
+    "                for i3 in mesh_v:\n",
+    "                    for i4 in mesh_v:\n",
+    "                        targets[:,c]=[i1, i2, i3, i4]\n",
+    "                        targets[:,c] = targets[:,c]/norm(targets[:,c],1)\n",
+    "                        c = c + 1\n",
+    "    elif n==5:\n",
+    "        c = 0\n",
+    "        for i1 in mesh_v:\n",
+    "            for i2 in mesh_v:\n",
+    "                for i3 in mesh_v:\n",
+    "                    for i4 in mesh_v:\n",
+    "                        for i5 in mesh_v:\n",
+    "                            targets[:,c]=[i1, i2, i3, i4, i5]\n",
+    "                            targets[:,c] = targets[:,c]/norm(targets[:,c],1)\n",
+    "                            c = c + 1                            \n",
+    "    return targets\n",
+    "    \n",
+    "def predict_OT(image):\n",
+    "\n",
+    "    source = image[0,:,:].flatten()\n",
+    "    \n",
+    "#     n = 5\n",
+    "    n = source.shape[0]\n",
+    "    epsilon = 1.\n",
+    "        \n",
+    "    C = np.zeros((n,n))\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            C[i,j] = np.abs(i-j)\n",
+    "\n",
+    "    K = np.exp(-C/epsilon)\n",
+    "\n",
+    "#     mesh_size = 5\n",
+    "#     mesh_v = np.linspace(0,1,num=mesh_size)\n",
+    "#     targets_size = (mesh_v.shape[0])**n\n",
+    "    targets_size = 100\n",
+    "    \n",
+    "    lambda_v = 10**np.arange(-2,2,.1)\n",
+    "    \n",
+    "    dist_W = np.zeros((targets_size,lambda_v.shape[0]))\n",
+    "    dist_l1 = np.zeros((targets_size,lambda_v.shape[0]))\n",
+    "    dist_l2 = np.zeros((targets_size,lambda_v.shape[0]))\n",
+    "    target_v = np.zeros((targets_size,lambda_v.shape[0],n))\n",
+    "\n",
+    "    for lambda_ind in range(lambda_v.shape[0]):\n",
+    "#         targets = deterministic_dist(n,mesh_v)\n",
+    "#         for rand_ind in range(targets_size):\n",
+    "#             target = targets[:,rand_ind]\n",
+    "        for rand_ind in range(targets_size):\n",
+    "            target = np.random.rand(n,1)\n",
+    "            target = target/norm(target,1)\n",
+    "\n",
+    "            u = np.ones(n)\n",
+    "            v = np.ones(n)\n",
+    "            T = np.diag(u) @ K @ np.diag(v)\n",
+    "\n",
+    "            for opt_ind in range(1000):\n",
+    "                u = source/(K @ v)\n",
+    "                v = target/(K.T @ u)\n",
+    "                T = np.diag(u) @ K @ np.diag(v)\n",
+    "\n",
+    "            dist_W[rand_ind,lambda_ind] = norm(C * T, 'fro') \\\n",
+    "                + lambda_v[lambda_ind]*entropy1D(target)\n",
+    "            dist_l1[rand_ind,lambda_ind] = norm(source-target,1) \\\n",
+    "                + lambda_v[lambda_ind]*entropy1D(target)\n",
+    "            dist_l2[rand_ind,lambda_ind] = norm(source-target,2) \\\n",
+    "                + lambda_v[lambda_ind]*entropy1D(target)\n",
+    "            target_v[rand_ind,lambda_ind,:] = target.flatten()\n",
+    "\n",
+    "        I = np.argmin(dist_W[:,lambda_ind])\n",
+    "        optimal_target = target_v[I,lambda_ind,:]\n",
+    "        target_W_entropy[lambda_ind] = entropy1D(optimal_target)\n",
+    "        target_W_points[lambda_ind] = L0(optimal_target, thresh)\n",
+    "        \n",
+    "    return target_W_points[0]\n",
+    "    \n",
+    "def test_OT(test_loader, predictions_shape, scores_shape):\n",
+    "    predictions = np.zeros(predictions_shape, dtype=np.int64) # placeholder for all predictions\n",
+    "    scores = np.zeros(scores_shape, dtype=np.float32) # placeholder for all scores\n",
+    "    \n",
+    "    data_np = data.numpy()\n",
+    "    for i in range(predictions.shape[0]):\n",
+    "        p = predict_OT(data_np[i,:,:,:])\n",
+    "        if p==1:\n",
+    "            predictions[i] = 0\n",
+    "        else:\n",
+    "            predictions[i] = 1\n",
+    "            \n",
+    "    return predictions, scores\n",
+    "\n",
     "def test(test_loader):\n",
     "    '''\n",
     "    Forward pass through the CNN for one epoch\n",
@@ -220,20 +352,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create text file with predictions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "End of classification | time: 46.48s\n",
-      "----------------------------------------\n",
-      "Objects classified as Class 1: 621\n",
-      "Objects classified as Class 2: 197\n",
-      "Objects classified as Class 3: 240\n",
-      "Objects classified as Class 4: 1694\n"
+      "/tmp/ipykernel_10642/311722833.py:114: RuntimeWarning: overflow encountered in matmul\n",
+      "  T = np.diag(u) @ K @ np.diag(v)\n",
+      "/tmp/ipykernel_10642/311722833.py:112: RuntimeWarning: overflow encountered in true_divide\n",
+      "  u = source/(K @ v)\n",
+      "/tmp/ipykernel_10642/311722833.py:113: RuntimeWarning: invalid value encountered in matmul\n",
+      "  v = target/(K.T @ u)\n",
+      "/tmp/ipykernel_10642/311722833.py:113: RuntimeWarning: overflow encountered in matmul\n",
+      "  v = target/(K.T @ u)\n",
+      "/tmp/ipykernel_10642/311722833.py:114: RuntimeWarning: invalid value encountered in matmul\n",
+      "  T = np.diag(u) @ K @ np.diag(v)\n",
+      "/tmp/ipykernel_10642/311722833.py:113: RuntimeWarning: overflow encountered in true_divide\n",
+      "  v = target/(K.T @ u)\n",
+      "/tmp/ipykernel_10642/311722833.py:113: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  v = target/(K.T @ u)\n",
+      "/tmp/ipykernel_10642/311722833.py:112: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  u = source/(K @ v)\n"
      ]
     }
    ],
@@ -250,6 +399,7 @@
     "    model.cuda()\n",
     "\n",
     "predictions, scores = test(test_loader) # classify all 32x32x5 arrays\n",
+    "predictions_OT, scores_OT = test_OT(test_loader, predictions.shape, scores.shape) # classify all 32x32x5 arrays\n",
     "\n",
     "np.save(os.path.join('output','scores'), scores) # save scores to 'output/scores.npy' file\n",
     "print('End of classification | time: %.2fs'%(time.time() - start_time))\n",
@@ -257,14 +407,25 @@
     "print('Objects classified as Class 1: %d'%(len(np.where(predictions == 0)[0])))\n",
     "print('Objects classified as Class 2: %d'%(len(np.where(predictions == 1)[0])))\n",
     "print('Objects classified as Class 3: %d'%(len(np.where(predictions == 2)[0])))\n",
-    "print('Objects classified as Class 4: %d'%(len(np.where(predictions == 3)[0])))"
+    "print('Objects classified as Class 4: %d'%(len(np.where(predictions == 3)[0])))\n",
+    "print('OT:')\n",
+    "print('Objects classified as Class 1: %d'%(len(np.where(predictions_OT == 0)[0])))\n",
+    "print('Objects classified as Class 2: %d'%(len(np.where(predictions_OT == 1)[0])))\n",
+    "print('Objects classified as Class 3: %d'%(len(np.where(predictions_OT == 2)[0])))\n",
+    "print('Objects classified as Class 4: %d'%(len(np.where(predictions_OT == 3)[0])))"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Create text file with predictions"
+    "predictions_agree = np.where(predictions == predictions_OT)\n",
+    "print('Class 1 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 0)[0])/predictions.shape[0]))\n",
+    "print('Class 2 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 1)[0])/predictions.shape[0]))\n",
+    "print('Class 3 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 2)[0])/predictions.shape[0]))\n",
+    "print('Class 4 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 3)[0])/predictions.shape[0]))"
    ]
   },
   {
