add OT code, II

--- a/StarcNet/demo.ipynb
+++ b/StarcNet/demo.ipynb
@@ -276,7 +276,7 @@
     "#         for rand_ind in range(targets_size):\n",
     "#             target = targets[:,rand_ind]\n",
     "        for rand_ind in range(targets_size):\n",
-    "            target = np.random.rand(n,1)\n",
+    "            target = np.random.rand(n)\n",
     "            target = target/norm(target,1)\n",
     "\n",
     "            u = np.ones(n)\n",
@@ -367,22 +367,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10642/311722833.py:114: RuntimeWarning: overflow encountered in matmul\n",
-      "  T = np.diag(u) @ K @ np.diag(v)\n",
-      "/tmp/ipykernel_10642/311722833.py:112: RuntimeWarning: overflow encountered in true_divide\n",
+      "/tmp/ipykernel_10857/1638884864.py:112: RuntimeWarning: overflow encountered in true_divide\n",
       "  u = source/(K @ v)\n",
-      "/tmp/ipykernel_10642/311722833.py:113: RuntimeWarning: invalid value encountered in matmul\n",
+      "/tmp/ipykernel_10857/1638884864.py:113: RuntimeWarning: invalid value encountered in matmul\n",
       "  v = target/(K.T @ u)\n",
-      "/tmp/ipykernel_10642/311722833.py:113: RuntimeWarning: overflow encountered in matmul\n",
-      "  v = target/(K.T @ u)\n",
-      "/tmp/ipykernel_10642/311722833.py:114: RuntimeWarning: invalid value encountered in matmul\n",
-      "  T = np.diag(u) @ K @ np.diag(v)\n",
-      "/tmp/ipykernel_10642/311722833.py:113: RuntimeWarning: overflow encountered in true_divide\n",
-      "  v = target/(K.T @ u)\n",
-      "/tmp/ipykernel_10642/311722833.py:113: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  v = target/(K.T @ u)\n",
-      "/tmp/ipykernel_10642/311722833.py:112: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  u = source/(K @ v)\n"
+      "/tmp/ipykernel_10857/1638884864.py:114: RuntimeWarning: invalid value encountered in matmul\n",
+      "  T = np.diag(u) @ K @ np.diag(v)\n"
      ]
     }
    ],
