--- a/StarcNet/demo.ipynb
+++ b/StarcNet/demo.ipynb
@@ -157,7 +157,7 @@
     "data_test = data_all - mean[np.newaxis,:,np.newaxis,np.newaxis] # subtract mean\n",
     "\n",
     "data = torch.from_numpy(data_test).float()\n",
-    "test_loader = DataLoader(TensorDataset(data), batch_size=batch_size, shuffle=False)\n"
+    "test_loader = DataLoader(TensorDataset(data), batch_size=batch_size, shuffle=False)"
    ]
   },
   {
@@ -176,7 +176,6 @@
     "def L0(x, thresh):\n",
     "\n",
     "    x_abs = np.abs(x)\n",
-    "\n",
     "    x_large = np.where(x_abs>thresh)\n",
     "\n",
     "    y = 0\n",
@@ -244,18 +243,21 @@
     "                            c = c + 1                            \n",
     "    return targets\n",
     "    \n",
-    "def predict_OT(image):\n",
+    "def predict_OT(image, lambda_v):\n",
     "\n",
+    "    image_width = image.shape[1]\n",
+    "    image_height = image.shape[2]\n",
     "    source = image[0,:,:].flatten()\n",
     "    \n",
-    "#     n = 5\n",
     "    n = source.shape[0]\n",
     "    epsilon = 1.\n",
     "        \n",
     "    C = np.zeros((n,n))\n",
     "    for i in range(n):\n",
     "        for j in range(n):\n",
-    "            C[i,j] = np.abs(i-j)\n",
+    "            (ix, iy) = np.unravel_index(i,(image_width, image_height))\n",
+    "            (jx, jy) = np.unravel_index(j,(image_width, image_height))\n",
+    "            C[i,j] = norm([ix-jx, iy-jy])\n",
     "\n",
     "    K = np.exp(-C/epsilon)\n",
     "\n",
@@ -264,12 +266,12 @@
     "#     targets_size = (mesh_v.shape[0])**n\n",
     "    targets_size = 100\n",
     "    \n",
-    "    lambda_v = 10**np.arange(-2,2,.1)\n",
-    "    \n",
     "    dist_W = np.zeros((targets_size,lambda_v.shape[0]))\n",
     "    dist_l1 = np.zeros((targets_size,lambda_v.shape[0]))\n",
     "    dist_l2 = np.zeros((targets_size,lambda_v.shape[0]))\n",
     "    target_v = np.zeros((targets_size,lambda_v.shape[0],n))\n",
+    "    target_W_entropy = np.zeros((lambda_v.shape[0]))\n",
+    "    target_W_points = np.zeros((lambda_v.shape[0]))\n",
     "\n",
     "    for lambda_ind in range(lambda_v.shape[0]):\n",
     "#         targets = deterministic_dist(n,mesh_v)\n",
@@ -303,13 +305,13 @@
     "        \n",
     "    return target_W_points[0]\n",
     "    \n",
-    "def test_OT(test_loader, predictions_shape, scores_shape):\n",
+    "def test_OT(test_loader, predictions_shape, scores_shape, lambda_v):\n",
     "    predictions = np.zeros(predictions_shape, dtype=np.int64) # placeholder for all predictions\n",
     "    scores = np.zeros(scores_shape, dtype=np.float32) # placeholder for all scores\n",
     "    \n",
     "    data_np = data.numpy()\n",
     "    for i in range(predictions.shape[0]):\n",
-    "        p = predict_OT(data_np[i,:,:,:])\n",
+    "        p = predict_OT(data_np[i,:,:,:], lambda_v)\n",
     "        if p==1:\n",
     "            predictions[i] = 0\n",
     "        else:\n",
@@ -360,19 +362,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10857/1638884864.py:112: RuntimeWarning: overflow encountered in true_divide\n",
-      "  u = source/(K @ v)\n",
-      "/tmp/ipykernel_10857/1638884864.py:113: RuntimeWarning: invalid value encountered in matmul\n",
-      "  v = target/(K.T @ u)\n",
-      "/tmp/ipykernel_10857/1638884864.py:114: RuntimeWarning: invalid value encountered in matmul\n",
-      "  T = np.diag(u) @ K @ np.diag(v)\n"
+      "End of classification | time: 48.64s\n",
+      "----------------------------------------\n",
+      "Objects classified as Class 1: 621\n",
+      "Objects classified as Class 2: 197\n",
+      "Objects classified as Class 3: 240\n",
+      "Objects classified as Class 4: 1694\n"
      ]
     }
    ],
@@ -389,7 +393,6 @@
     "    model.cuda()\n",
     "\n",
     "predictions, scores = test(test_loader) # classify all 32x32x5 arrays\n",
-    "predictions_OT, scores_OT = test_OT(test_loader, predictions.shape, scores.shape) # classify all 32x32x5 arrays\n",
     "\n",
     "np.save(os.path.join('output','scores'), scores) # save scores to 'output/scores.npy' file\n",
     "print('End of classification | time: %.2fs'%(time.time() - start_time))\n",
@@ -397,25 +400,52 @@
     "print('Objects classified as Class 1: %d'%(len(np.where(predictions == 0)[0])))\n",
     "print('Objects classified as Class 2: %d'%(len(np.where(predictions == 1)[0])))\n",
     "print('Objects classified as Class 3: %d'%(len(np.where(predictions == 2)[0])))\n",
-    "print('Objects classified as Class 4: %d'%(len(np.where(predictions == 3)[0])))\n",
-    "print('OT:')\n",
-    "print('Objects classified as Class 1: %d'%(len(np.where(predictions_OT == 0)[0])))\n",
-    "print('Objects classified as Class 2: %d'%(len(np.where(predictions_OT == 1)[0])))\n",
-    "print('Objects classified as Class 3: %d'%(len(np.where(predictions_OT == 2)[0])))\n",
-    "print('Objects classified as Class 4: %d'%(len(np.where(predictions_OT == 3)[0])))"
+    "print('Objects classified as Class 4: %d'%(len(np.where(predictions == 3)[0])))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OT:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_13503/1748853628.py:118: RuntimeWarning: overflow encountered in true_divide\n",
+      "  u = source/(K @ v)\n",
+      "/tmp/ipykernel_13503/1748853628.py:119: RuntimeWarning: invalid value encountered in matmul\n",
+      "  v = target/(K.T @ u)\n",
+      "/tmp/ipykernel_13503/1748853628.py:120: RuntimeWarning: invalid value encountered in matmul\n",
+      "  T = np.diag(u) @ K @ np.diag(v)\n",
+      "/tmp/ipykernel_13503/1748853628.py:118: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  u = source/(K @ v)\n"
+     ]
+    }
+   ],
    "source": [
-    "predictions_agree = np.where(predictions == predictions_OT)\n",
-    "print('Class 1 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 0)[0])/predictions.shape[0]))\n",
-    "print('Class 2 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 1)[0])/predictions.shape[0]))\n",
-    "print('Class 3 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 2)[0])/predictions.shape[0]))\n",
-    "print('Class 4 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 3)[0])/predictions.shape[0]))"
+    "print('OT:')\n",
+    "lambda_v = 10.**np.arange(-2,2,.1)\n",
+    "for lambda_ind in range(lambda_v.shape[0]):\n",
+    "    # classify all 32x32x5 arrays\n",
+    "    predictions_OT, scores_OT = test_OT(test_loader, predictions.shape, scores.shape,np.array([lambda_v[lambda_ind]]))\n",
+    "    print('lambda: %f'%lambda_v[lambda_ind])\n",
+    "    print('Objects classified as Class 1: %d'%(len(np.where(predictions_OT == 0)[0])))\n",
+    "    print('Objects classified as Class 2: %d'%(len(np.where(predictions_OT == 1)[0])))\n",
+    "    print('Objects classified as Class 3: %d'%(len(np.where(predictions_OT == 2)[0])))\n",
+    "    print('Objects classified as Class 4: %d'%(len(np.where(predictions_OT == 3)[0])))\n",
+    "    predictions_agree = np.where(predictions == predictions_OT)\n",
+    "    print('Class 1 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 0)[0])/predictions.shape[0]))\n",
+    "    print('Class 2 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 1)[0])/predictions.shape[0]))\n",
+    "    print('Class 3 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 2)[0])/predictions.shape[0]))\n",
+    "    print('Class 4 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 3)[0])/predictions.shape[0]))"
    ]
   },
   {
