--- a/StarcNet/demo.ipynb
+++ b/StarcNet/demo.ipynb
@@ -216,11 +216,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "End of classification | time: 46.18s\n",
+      "----------------------------------------\n",
+      "Objects classified as Class 1: 621\n",
+      "Objects classified as Class 2: 197\n",
+      "Objects classified as Class 3: 240\n",
+      "Objects classified as Class 4: 1694\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = time.time()\n",
     "\n",
@@ -253,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +289,7 @@
     "\n",
     "def L0_2D(x):\n",
     "    x_abs = np.abs(x)\n",
-    "    thresh = np.amax(x_abs)*0.9\n",
+    "    thresh = np.amax(x_abs)*0.5\n",
     "    y = 0\n",
     "    for i in range(x_abs.shape[0]):\n",
     "        for j in range(x_abs.shape[1]):\n",
@@ -385,7 +398,7 @@
     "    source = source/norm(source,1)\n",
     "\n",
     "    n = source.shape[0]\n",
-    "    epsilon = 1.\n",
+    "    epsilon = .01\n",
     "\n",
     "    C = np.zeros((n,n))\n",
     "    for i in range(n):\n",
@@ -472,17 +485,243 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OT:\n",
+      "lambda: 0.000\n",
+      "channel: 0\n",
+      "0,"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_54372/2433615067.py:173: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  u = source/(K @ v)\n",
+      "/tmp/ipykernel_54372/2433615067.py:173: RuntimeWarning: overflow encountered in true_divide\n",
+      "  u = source/(K @ v)\n",
+      "/tmp/ipykernel_54372/2433615067.py:174: RuntimeWarning: invalid value encountered in matmul\n",
+      "  v = target/(K.T @ u)\n",
+      "/tmp/ipykernel_54372/2433615067.py:175: RuntimeWarning: invalid value encountered in matmul\n",
+      "  T = np.diag(u) @ K @ np.diag(v)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.31024317]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 1\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.44560679]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 2\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.1939812]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 3\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.48418026]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 4\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.59093212]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "Objects classified as Class 1: 1\n",
+      "Objects classified as Class 2: 0\n",
+      "Objects classified as Class 3: 0\n",
+      "Objects classified as Class 4: 2751\n",
+      "Class 1 accuracy: 0.000000\n",
+      "Class 2 accuracy: 0.000000\n",
+      "Class 3 accuracy: 0.000000\n",
+      "Class 4 accuracy: 0.615552\n",
+      "lambda: 0.000\n",
+      "channel: 0\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.46866919]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 1\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.74364897]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 2\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.30833912]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 3\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[5.88453668]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 4\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.66978978]\n",
+      "[2.]\n",
+      "data point 1167, true class label 2, prediction 2.000000\n",
+      "\n",
+      "Objects classified as Class 1: 0\n",
+      "Objects classified as Class 2: 1\n",
+      "Objects classified as Class 3: 0\n",
+      "Objects classified as Class 4: 2751\n",
+      "Class 1 accuracy: 0.000000\n",
+      "Class 2 accuracy: 0.000363\n",
+      "Class 3 accuracy: 0.000000\n",
+      "Class 4 accuracy: 0.615552\n",
+      "lambda: 0.001\n",
+      "channel: 0\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.64899119]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 1\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[5.69720918]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 2\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[5.86719301]\n",
+      "[2.]\n",
+      "data point 1167, true class label 2, prediction 2.000000\n",
+      "\n",
+      "channel: 3\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.69773486]\n",
+      "[3.]\n",
+      "data point 1167, true class label 2, prediction 3.000000\n",
+      "\n",
+      "channel: 4\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.47775469]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "Objects classified as Class 1: 1\n",
+      "Objects classified as Class 2: 0\n",
+      "Objects classified as Class 3: 0\n",
+      "Objects classified as Class 4: 2751\n",
+      "Class 1 accuracy: 0.000000\n",
+      "Class 2 accuracy: 0.000000\n",
+      "Class 3 accuracy: 0.000000\n",
+      "Class 4 accuracy: 0.615552\n",
+      "lambda: 0.010\n",
+      "channel: 0\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[5.30889168]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 1\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.46686443]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 2\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.5756055]\n",
+      "[2.]\n",
+      "data point 1167, true class label 2, prediction 2.000000\n",
+      "\n",
+      "channel: 3\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.52972336]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 4\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.66029035]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "Objects classified as Class 1: 1\n",
+      "Objects classified as Class 2: 0\n",
+      "Objects classified as Class 3: 0\n",
+      "Objects classified as Class 4: 2751\n",
+      "Class 1 accuracy: 0.000000\n",
+      "Class 2 accuracy: 0.000000\n",
+      "Class 3 accuracy: 0.000000\n",
+      "Class 4 accuracy: 0.615552\n",
+      "lambda: 0.100\n",
+      "channel: 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_54372/1822313746.py:11: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  plt.matshow(data_np[i,channel,:,:])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.08008876]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 1\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.63285907]\n",
+      "[1.]\n",
+      "data point 1167, true class label 2, prediction 1.000000\n",
+      "\n",
+      "channel: 2\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.29445946]\n",
+      "[2.]\n",
+      "data point 1167, true class label 2, prediction 2.000000\n",
+      "\n",
+      "channel: 3\n",
+      "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,\n",
+      "[6.40028059]\n",
+      "[3.]\n",
+      "data point 1167, true class label 2, prediction 3.000000\n",
+      "\n",
+      "channel: 4\n",
+      "0,1,2,3,4,5,6,7,8,9,10,"
+     ]
+    }
+   ],
    "source": [
     "print('OT:')\n",
     "data_subsample = np.random.choice(predictions.shape[0],size=10,replace=False)\n",
     "data_np = data.numpy()\n",
-    "predictions_OT = {}\n",
-    "lambda_v = 10.**np.arange(-3,-1,1)\n",
+    "lambda_v = 10.**np.arange(-5,1,1)\n",
     "for lambda_ind in range(lambda_v.shape[0]):\n",
     "    print('lambda: %2.3f'%lambda_v[lambda_ind])\n",
+    "    predictions_OT = {}\n",
     "    for i in data_subsample:\n",
-    "        if predictions[i]==0 or predictions[i]==1:\n",
+    "        if predictions[i]==1: # or predictions[i]==0:\n",
     "            for channel in range(0,5):\n",
     "                plt.matshow(data_np[i,channel,:,:])\n",
     "                plt.title('data point: %d, channel: %d, class: %d'%(i, channel, predictions[i]+1))\n",
@@ -493,18 +732,18 @@
     "                print('')\n",
     "                predictions_OT[i] = prediction_OT[i]\n",
     "                \n",
-    "prediction_OT = 0*prediction_OT+3\n",
-    "for k,v in predictions_OT.items():\n",
-    "    prediction_OT[k] = v\n",
-    "print('Objects classified as Class 1: %d'%(len(np.where(prediction_OT == 0)[0])))\n",
-    "print('Objects classified as Class 2: %d'%(len(np.where(prediction_OT == 1)[0])))\n",
-    "print('Objects classified as Class 3: %d'%(len(np.where(prediction_OT == 2)[0])))\n",
-    "print('Objects classified as Class 4: %d'%(len(np.where(prediction_OT == 3)[0])))\n",
-    "predictions_agree = np.where(predictions == prediction_OT)\n",
-    "print('Class 1 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 0)[0])/predictions.shape[0]))\n",
-    "print('Class 2 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 1)[0])/predictions.shape[0]))\n",
-    "print('Class 3 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 2)[0])/predictions.shape[0]))\n",
-    "print('Class 4 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 3)[0])/predictions.shape[0]))\n",
+    "    prediction_OT = 0*prediction_OT+3\n",
+    "    for k,v in predictions_OT.items():\n",
+    "        prediction_OT[k] = v\n",
+    "    print('Objects classified as Class 1: %d'%(len(np.where(prediction_OT == 0)[0])))\n",
+    "    print('Objects classified as Class 2: %d'%(len(np.where(prediction_OT == 1)[0])))\n",
+    "    print('Objects classified as Class 3: %d'%(len(np.where(prediction_OT == 2)[0])))\n",
+    "    print('Objects classified as Class 4: %d'%(len(np.where(prediction_OT == 3)[0])))\n",
+    "    predictions_agree = np.where(predictions == prediction_OT)\n",
+    "    print('Class 1 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 0)[0])/predictions.shape[0]))\n",
+    "    print('Class 2 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 1)[0])/predictions.shape[0]))\n",
+    "    print('Class 3 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 2)[0])/predictions.shape[0]))\n",
+    "    print('Class 4 accuracy: %f'%(len(np.where(predictions[predictions_agree] == 3)[0])/predictions.shape[0]))\n",
     "                "
    ]
   },
