--- a/tex/EUSIPCO2022/main.tex
+++ b/tex/EUSIPCO2022/main.tex
@@ -29,8 +29,8 @@
 \title{Optimal Transport for Super Resolution Applied to Astronomy Imaging}
 
 \author{\IEEEauthorblockN{Michael Rawson}
-\IEEEauthorblockA{\textit{Department of Mathematics} \\
-\textit{University of Maryland at College Park}\\
+\IEEEauthorblockA{\textit{Pacific Northwest National Lab and } \\
+\textit{Dept. of Math, University of Maryland at C.P.}\\
 Maryland, USA \\
 rawson@umd.edu}
 \and
@@ -50,11 +50,6 @@ Super resolution is an essential tool in optics, especially on interstellar scal
 optimal transport, Wasserstein distance, super resolution, compressed sensing, sparse imaging, sparse regularization, sparsity, maximum entropy, convolutional neural network
 \end{IEEEkeywords}
 
-% TODO before submit : 
-
-% update bib 
-
-% spell check
 
 \section{Introduction and Background}
 
@@ -63,19 +58,19 @@ optimal transport, Wasserstein distance, super resolution, compressed sensing, s
 Super resolution seeks to improve image resolution without further data collection. This is useful when important features or pixels are missing. Improving the measurement device, such as a camera or telescope, will improve the image resolution but only up to limits governed by physical laws, for example the diffraction limit. Super resolution can increase image resolution beyond this point given constraints that give a well-posed inverse problem. The most common constraint is that the true image is either sparse or smooth in some basis. For example, Gaussian noise is a common input that blurs important features. Removing additive Gaussian noise can be done, imperfectly, by solving an inverse problem that constrains total variation and hence enforces smoothness \cite{ng}. 
 
 A more general solution is to minimize with respect to a regularizing term that maximizes sparsity. Compressed sensing methods often minimize an objective function 
-involving the $L^1$ norm of the solution \cite{candes}. Minimizing $L_0$ maximizes sparsity but $L^1$ is usually used instead for its convex properties. Another regularizer that maximizes sparsity is entropy \cite{gull, cornwell1985}. Neural networks or deep learning has more recently been used for inverse problems, especially on images \cite{ongie}.
+involving the $L^1$ norm of the solution \cite{candes}. Minimizing $L^0$ maximizes sparsity but $L^1$ is usually used instead for its convex properties. Another regularizer that maximizes sparsity is entropy \cite{gull, cornwell1985}. Neural networks or deep learning has more recently been used for inverse problems, especially on images \cite{ongie}.
 
 \subsection{Optimal Transport}
-Optimal transport has a long history in pure and applied math, and has been used recently in the field of imaging \cite{cuturi}. One starts with a source distribution, $\mu\in\bbP(X)$, target distribution, $\nu\in\bbP(Y)$, and a cost $C:X \times Y \rightarrow \R$ on spaces $X$ and $Y$. In the discrete setting relevant to scientific computing (where $X$ and $Y$ are finite sets), distributions are represented as finite dimensional vectors.
-Given two positive vectors of $L^1$-norm equal 1, $\mu\in\R^n_{>0}, \nu \in \R^m_{>0}$, together with a cost $C$ represented as an $n\times m$ matrix $(C_{ij})$, the optimal transport plan between $\mu$ and $\nu$ is 
+Optimal transport has a long history in pure and applied mathematics, and has been used recently in the field of imaging \cite{cuturi}. One starts with a source distribution, $\mu\in\bbP(X)$, target distribution, $\nu\in\bbP(Y)$, and a cost $C:X \times Y \rightarrow \R$ on spaces $X$ and $Y$. In the discrete setting relevant to scientific computing (where $X$ and $Y$ are finite sets), distributions are represented as finite dimensional vectors.
+Given two positive vectors of $L^1$-norm equal to 1, $\mu\in\R^n_{>0}, \nu \in \R^m_{>0}$, together with a cost $C$ represented as an $n\times m$ matrix $(C_{ij})$, the optimal transport plan between $\mu$ and $\nu$ is 
 \begin{equation} \label{eq:OTPlan} 
-    \arg\min_{P\in \Pi(\mu,\nu)} \sum_{i=1}^n \sum_{j=1}^m C_{ij} P_{ij} 
+    \arg\min_{P\in \Pi(\mu,\nu)} \sum_{i=1}^n \sum_{j=1}^n C_{ij} P_{ij} 
 \end{equation}
 where $\Pi(\mu,\nu)$ is the set of transport plans from $\mu$ to $\nu$:
-$$ \Pi(\mu,\nu) = \{P\in\R^{n\times m}: \sum_{i=1}^n P_{ij} = \nu_j\ \forall j, \sum_{j=1}^m P_{ij} = \mu_i\ \forall i\}. $$
+$$ \Pi(\mu,\nu) = \{P\in\R^{n\times m}: \sum_{i=1}^n P_{ij} = \nu_j\ \forall j, \sum_{j=1}^n P_{ij} = \mu_i\ \forall i\}. $$
 When $m=n$ and $C$ defines a metric on $\{1,\ldots,n\}$ (i.e. $d(i,j) := C_{ij}$ is symmetric, non-degenerate, and satisfies the triangle inequality) then the minimum value
 \begin{equation} \label{eq:Wdist} 
-    d_W(\mu,\nu) := \min_{P\in \Pi(\mu,\nu)} \sum_{i=1}^n \sum_{j=1}^m C_{ij} P_{ij} 
+    d_W(\mu,\nu) := \min_{P\in \Pi(\mu,\nu)} \sum_{i=1}^n \sum_{j=1}^n C_{ij} P_{ij} 
 \end{equation}
 defines a metric on $\bbP(\{1,\ldots,n\})$ often referred to as the 1st Wasserstein metric or just the Wasserstein metric \cite{villani}.
 
@@ -93,21 +88,21 @@ In \eqref{eq:Entropy}, we use the convention that $0\cdot\ln(0) = 0$. With this 
 The distance $d_W$ in Equation \eqref{eq:Wdist} 
 can be computed exactly using methods from linear programming. However, for large $n$ the quickly growing computation times excludes this from many applications \cite{cuturi}. In applications involving large data sets, $d_W$ is often replaced by its \emph{entropic regularization}, which is more feasible from a computational perspective \cite{peyre}. Given a small constant $\epsilon>0$, the $\epsilon$-regularized distance between $\mu,\nu\in \bbP(\{1,\ldots,n\})$ is 
 \begin{equation} \label{eq:Wepsilon}
-    d_W^\epsilon(\mu,\nu) := \sum_{i=1}^n \sum_{j=1}^m C_{ij}P^*_{ij}
+    d_W^\epsilon(\mu,\nu) := \sum_{i=1}^n \sum_{j=1}^n C_{ij}P^*_{ij}
 \end{equation}
 where 
 \begin{equation}
-    P^* = \arg\min_{P\in \Pi(\mu,\nu)} \sum_{i=1}^n \sum_{j=1}^m C_{ij}P_{ij} - \epsilon H(P).
+    P^* = \arg\min_{P\in \Pi(\mu,\nu)} \sum_{i=1}^n \sum_{j=1}^n C_{ij}P_{ij} - \epsilon H(P).
     \label{eq:WepsilonObj}
 \end{equation}
 The regularized objective function in \eqref{eq:WepsilonObj} is strictly convex and proper, hence always admits a unique minimizer. While the minimizer in the true optimal transport problem is usually very sparse, the entropy term in \eqref{eq:WepsilonObj} pushes the minimizer away from the boundary of the unit simplex, producing a less sparse minimizer. As $\epsilon\rightarrow 0$, this minimizer converges to a minimizer of \eqref{eq:Wdist} (the minimizer with highest entropy if there are more than one), and $d_W^\epsilon$ converges to $d_W$ \cite{peyre}. 
 
 A simple application of Lagrange multipliers show that the minimizer of \eqref{eq:WepsilonObj} is the unique element in $\Pi(\mu,\nu)$ on the form
-\begin{equation} P_{ij} = \sum_{i=1}^n \sum_{j=1}^m f_i e^{-C_{ij}/\epsilon} g_j \label{eq:ArgmindWepsilon} \end{equation}
+\begin{equation} P_{ij} = \sum_{i=1}^n \sum_{j=1}^n f_i e^{-C_{ij}/\epsilon} g_j \label{eq:ArgmindWepsilon} \end{equation}
 for some unknown positive multipliers $f=(f_1,\ldots,f_n),\ g=(g_1,\ldots g_n)$ \cite{peyre}. Determining $f$ and $g$ from $\mu, \nu$ and the matrix $(e^{-C_{ij}/\epsilon})$ is known as the matrix scaling problem, and a standard algorithm to find approximate solutions is the iterative proportional fitting procedure, also known as the Sinkhorn Algorithm \cite{peyre}. The matrix \eqref{eq:ArgmindWepsilon} lies in $\Pi(\mu,\nu)$ if $\sum_i P_{ij} = \mu_i$ for all $i$ and $\sum_j P_{ij} = \nu_j$ for all $j$. The Sinkhorn algorithm proceeds iteratively, alternating between updating $f$ so that the first of these conditions is satisfied and updating  $g$ so that the second of these conditions is satisfied (see Algorithm~\ref{algo:Sinkhorn}).
 
 \subsection{Wasserstein Distance Gradient}
-The multipliers $f\in\R^n$ and $g\in\R^m$ in the previous section can be thought of as dual variables for the optimization problem \eqref{eq:WepsilonObj}. More precisely, 
+The multipliers $f\in\R^n$ and $g\in\R^n$ in the previous section can be thought of as dual variables for the optimization problem \eqref{eq:WepsilonObj}. More precisely, 
 $$ F = \epsilon \ln(f), \; G = \epsilon \ln(g) $$ 
 are the Lagrange multipliers for \eqref{eq:Wepsilon} \cite{cuturi}. When considering the regularized distance between $\mu$ and $\nu$ as a function of $\mu$ (keeping $\nu$ fixed) this can, at least for positive $\mu$ and $\nu$, be exploited to approximate its gradient (see for example \cite{frogner, lellman}). The Sinkhorn Algorithm, used to approximate $d_\mu^\epsilon(\mu,\nu)$ and its gradient with respect to $\mu$ is summarized in Algorithm~\ref{algo:Sinkhorn}. Note that the output $F$ and $G$ of Algorithm~\ref{algo:Sinkhorn} needs to be projected onto the tangent space of the probability simplex to yield an approximation of the true gradients. 
 
@@ -144,7 +139,7 @@ are the Lagrange multipliers for \eqref{eq:Wepsilon} \cite{cuturi}. When conside
      	}
   	}
   	
-    $d_W^\epsilon = \sum_{i=1}^n \sum_{j=1}^m f_i g_j \exp(-C_{ij} /\epsilon) C_{ij}$ 
+    $d_W^\epsilon = \sum_{i=1}^n \sum_{j=1}^n f_i g_j \exp(-C_{ij} /\epsilon) C_{ij}$ 
   	
   	$F = -\epsilon \ln(f)$
   	
@@ -186,7 +181,7 @@ This method can be contrasted to maximum entropy methods in statistical physics,
 We will let $\nu\in P(\{1,\ldots,n\})$ be a sparse signal (i.e. $\|\nu\|_0<n$ is small), and use $\bar\nu$ to denote this signal with noise and distortion. In our application, we are interested in determining the support of $\nu$ (i.e. the indices of all non-zero entries in $\nu$) from $\bar\nu$. For two probability vectors $\mu$ and $\nu$ we will say that $\mu$ identifies the structure of $\nu$ if they have the same support, i.e. if $\mu_i>0$ if and only if $\nu_i>0$ for all $i$. Our main theorem (Theorem~\ref{thm1} below) shows that the minimizer of \eqref{eq:sparseNeigh} identifies the structure of $\nu$ under the assumptions that $\nu$ is sparse and the noisy signal $\bar\nu$ is close to $\nu$ in optimal transport distance. As is indicated by Theorem~\ref{thm:NoiseBound} below, the latter assumption is natural when dealing with Gaussian noise since the optimal transport distance, unlike total variation and $L^p$ distances, take the geometry of the space into account. 
 
 \subsection{Optimal Transport Bound on Gaussian Noise}
-Let the probability distribution $\nu:=\frac{1}{k}\sum_{i=1}^k \delta_{p_i}$ be a sparse signal in $\bbP(\R^d)$ where $\delta$ is the Dirac delta. Assume the noisy signal $\tilde\nu$ is produced in the following way: For each $p_i$ in the sum above, we sample $n$ points $x_i^1,\ldots,x_i^n$ in $\R^d$ according to a normal distribution centered at $p_i$ with independent components of variance $\sigma^2$. Let $N=kn$ be the number of points sampled and $\tilde\nu=\frac{1}{N}\sum_{i=1}^n \sum_{j=1}^m\delta_{x_i^j}$ be the noisy signal. 
+Let the probability distribution $\nu:=\frac{1}{k}\sum_{i=1}^k \delta_{p_i}$ be a sparse signal in $\bbP(\R^d)$ where $\delta$ is the Dirac delta. Assume the noisy signal $\tilde\nu$ is produced in the following way: For each $p_i$ in the sum above, we sample $n$ points $x_i^1,\ldots,x_i^n$ in $\R^d$ according to a normal distribution centered at $p_i$ with independent components of variance $\sigma^2$. Let $N=kn$ be the number of points sampled and $\tilde\nu=\frac{1}{N}\sum_{i=1}^n \sum_{j=1}^n\delta_{x_i^j}$ be the noisy signal. 
 \begin{theorem}
 \label{thm:NoiseBound}
     Given a sparse signal $\nu\in\bbP(\R^d)$ giving rise to a noisy signal $\tilde\nu$ as described above, the optimal transport distance between $\nu$ and $\tilde\nu$ is bounded by $\frac{\sigma^2}{N}X_N$ where $X_N$ is a random variable with distribution $\chi^2_{dN}$. In particular, the expected value and variance of $\frac{\sigma^2}{N}X_N$ are $d\sigma^2$ and $2d\sigma^4/N$, respectively. 
@@ -258,10 +253,10 @@ Let the probability distribution $\nu:=\frac{1}{k}\sum_{i=1}^k \delta_{p_i}$ be 
 	\For{$i=1,2,...,N$}
  	{
 % $ V_i = \arg\min_{v} d_W^\epsilon(X_n,v) + \lambda H(v)$\\
-        $ v = X_n;\ w = 1 $ \\
+        $ v = X_i $ \\
     	\While{ $v$ has not converged }
  	    {
-$w = \nabla d_W^\epsilon(X_n,\cdot)|_v + \lambda \nabla H|_v $ \\
+$w = \nabla d_W^\epsilon(X_i,\cdot)|_v + \lambda \nabla H|_v $ \\
 $ w = w - \langle w, \frac{1}{m} \bbI \rangle \cdot \frac{1}{m} \bbI $ \\
 $ \alpha = \sup\{\alpha \in \R : J_{\lambda,\epsilon}(v) > J_{\lambda,\epsilon}(v - \alpha w) \}$ \\
             $ \alpha = \min\{0.01, \alpha\}$\\
@@ -277,7 +272,7 @@ $ \alpha = \sup\{\alpha \in \R : J_{\lambda,\epsilon}(v) > J_{\lambda,\epsilon}(
         }
   	}
 	\caption{Optimal Transport Star Cluster Prediction}
-	\label{algo:OT}
+	\label{algo:star_cluster}
 \end{algorithm}
 
 \section{Minimizing the objective}
@@ -286,13 +281,13 @@ We solve \eqref{eq:sparseNeigh} using a gradient descent method with variable st
 As mentioned in Section~\ref{sec:Entropy}, the entropy is not differentiable on the boundary of the probability simplex. 
 An effect of this is that the output $F$ in Algorithm~\ref{algo:Sinkhorn} is infinity in all indices where $\mu$ is zero. 
 We circumvent this problem by defining the $i$'th entry in the gradient of $J$ to be $0$ whenever $\mu_i=0$. Geometrically, this means that whenever the algorithm reaches a sub-simplex of the probability simplex, it ignores the component of the gradient orthogonal to this sub-simplex, thus remaining in this sub-simplex for the rest of the algorithm. 
-Gradient descent will converge to a local minimum on the compact probability simplex since the objective is smooth when restricted to the local simplex face. Algorithm \ref{algo:OT} contains the pseudocode and also makes the star cluster classification described in Section \ref{sec:Star}.
+Gradient descent will converge to a local minimum on the compact probability simplex since the objective is smooth when restricted to the local simplex face. Algorithm \ref{algo:star_cluster} contains the pseudocode and also makes the star cluster classification described in Section \ref{sec:Star}.
 
 \section{Simulation}
 
 \begin{figure}[h]
 \centerline{\includegraphics[width=.5\textwidth]{OT_gradient_descent_1D_lambda=10.eps}}
-\caption{Plot of super resolution O.T. method Algorithm \ref{algo:OT}. Red line is initial distribution. Blue lines are steps along gradient of Equation \eqref{eq:sparseNeigh}. Pink line is final, converged distribution. $\lambda=10$.
+\caption{Plot of super resolution O.T. method Algorithm \ref{algo:star_cluster}. Red line is initial distribution. Blue lines are steps along gradient of Equation \eqref{eq:sparseNeigh}. Pink line is final, converged distribution. $\lambda=10$.
 epsilon = 0.1. Max Sinkhorn iterations = 5000. Gradient step size = 0.01. Gradient steps=50.}
 \label{fig:low_sparse}
 \end{figure}
@@ -306,7 +301,7 @@ With sparsity parameter $\lambda = 100$, the method produce the sparse approxima
 \begin{figure}[t]
 \centerline{\includegraphics[width=.5\textwidth]{OT_gradient_descent_1D_lambda=100.eps}}
 \caption{
-Plot of super resolution O.T. method Algorithm \ref{algo:OT}. Red line is initial distribution. Blue lines are steps along gradient of Equation \eqref{eq:sparseNeigh}. Pink line is final, converged distribution. $\lambda=100$.
+Plot of super resolution O.T. method Algorithm \ref{algo:star_cluster}. Red line is initial distribution. Blue lines are steps along gradient of Equation \eqref{eq:sparseNeigh}. Pink line is final, converged distribution. $\lambda=100$.
 epsilon = 0.1. Max Sinkhorn iterations = 5000. Gradient step size = 0.01. Gradient steps=50.}
 \label{fig:high_sparse}
 \end{figure}
@@ -314,7 +309,7 @@ epsilon = 0.1. Max Sinkhorn iterations = 5000. Gradient step size = 0.01. Gradie
 \section{Star Clustering Application}\label{sec:Star}
 
 \begin{table}[h]
-\caption{Confusion matrix of O.T. metod Algorithm \ref{algo:OT} on LEGUS data compared to StarcNet \cite{perez}. Column gives StarcNet classification and row gives Algorithm \ref{algo:OT} classification.}
+\caption{Confusion matrix of O.T. method Algorithm \ref{algo:star_cluster} on LEGUS data compared to StarcNet \cite{perez}. Column gives StarcNet classification and row gives Algorithm \ref{algo:star_cluster} classification.}
 \begin{center}
 \begin{tabular}{c|c|c|}
  & StarcNet Cluster & StarcNet Not Cluster \\
@@ -329,13 +324,13 @@ O.T. Not Cluster & 12.5\% (16) & 49.2\% (63)  \\
 \end{table}
 
 The formation and evolution of star clusters provide insight into the processes governing the birth of stars as well as the dynamical evolution of galaxies \cite{perez}. 
-In order to save human hours and get reproducible results, it is of interest to algorithmically detecting star clusters in images of sky patches. Many methods have been proposed to algortihmically detect star clusters, including CLEAN \cite{hogbom}, Multiscale CLEAN \cite{cornwell2008}, IUWT-based CS \cite{li}, decision trees \cite{grasha} and optimal sheaves \cite{robinson}. The state of the art method trains a convolutional neural network (CNN) to classify each sky patch or region in an image as containing a star cluster or not \cite{perez}. These neural networks are notoriously computationally expensive, sensitive to noise, and inflexible to appending or removing data variables. 
+In order to save human hours and get reproducible results, it is of interest to algorithmically detect star clusters in images of sky patches. Many methods have been proposed to algorithmically detect star clusters, including CLEAN \cite{hogbom}, Multiscale CLEAN \cite{cornwell2008}, IUWT-based CS \cite{li}, decision trees \cite{grasha} and optimal sheaves \cite{robinson}. The state of the art method trains a convolutional neural network (CNN) to classify each sky patch or region in an image as containing a star cluster or not \cite{perez}. These neural networks are notoriously computationally expensive, sensitive to noise, and inflexible to appending or removing data variables. 
 
 We propose using the Wasserstein inverse problem \eqref{eq:sparseNeigh} to detect star cluster locations. 
-Our dataset consists of measurements from the Hubble Space Telescope in the survey Treasury Project LEGUS (Legacy ExtraGalactic Ultraviolet Survey) \cite{calzetti}. This data set consists of $32\times 32$ pixel images of star patches. Each image comes in 5 frequency bands (NUV, U, B, V, and I) \cite{calzetti}. We encode each of these in a probability vector $\nu$ where each entry correspond to the intensity of a pixel, normalized to sum to 1. Algorithm~\ref{algo:OT} produces a sparse approximation each image which is classified as a star cluster if it contains just one `peak'. Specifically, the sparse image is made binary (1 and 0) by thresholding at 75\% of the max of the image. Then the number of `peaks' is the number of connected components in the binary image. This is the rank of the $0^{th}$ homology of the binary image, denoted $rank(H_0(V_i^{-1}([0.75 \delta,\ \delta])))$ in Algorithm \ref{algo:OT}. We perform this calculation for each of the 5 frequency bands that were measured. 
-Then these 5 predictions vote to produce the final prediction for the image in question. 
+Our dataset consists of measurements from the Hubble Space Telescope in the survey Treasury Project LEGUS (Legacy ExtraGalactic Ultraviolet Survey) \cite{calzetti}. This data set consists of $32\times 32$ pixel images of star patches. Each image comes in 5 frequency bands (NUV, U, B, V, and I) \cite{calzetti}. We encode each of these in a probability vector $\nu$ where each entry correspond to the intensity of a pixel, normalized to sum to 1. Algorithm~\ref{algo:star_cluster} produces a sparse approximation of each image which is classified as a star cluster if it contains just one `peak'. Specifically, the sparse image is made binary (1 and 0) by thresholding at 75\% of the max of the image. Then the number of `peaks' is the number of connected components in the binary image. This is the rank of the $0^{th}$ homology of the binary image, denoted $rank(H_0(V_i^{-1}([0.75 \delta,\ \delta])))$ in Algorithm \ref{algo:star_cluster}. We perform this calculation for each of the 5 frequency bands that were measured. 
+Then these 5 predictions vote with equal weight to produce the final prediction for the image in question. 
 
-Algorithm \ref{algo:OT} can be compared to the method of producing a binary image directly from the source image, without first producing a sparse approximation, and counting the number of connected components in this. The accuracy rate of this naive approach is 46\% with respect to the CNN. Algorithm \ref{algo:OT} increases in accuracy to 74\% with respect to the CNN. The CNN accuracy rate is 86\% with respect to experts, but even experts agree with each other only around 70\%-75\% \cite{adamo, grasha, wei}. Given that experts are the baseline, it is impossible, without overfitting, for a computational model to do better than that. Therefore our method provides a very high performance given that no neural network training, which often takes weeks of compute time, is required. Additionally, the O.T. method is less sensitive to noise than a CNN, see \cite{zou}, which we describe and bound in Theorems \ref{thm:NoiseBound}, \ref{thm1}, and \ref{thm:robust}. Finally, with our method, variables can be simply added and removed where Equation \eqref{eq:sparseNeigh} is quickly recalculated. 
+Algorithm \ref{algo:star_cluster} can be compared to the method of producing a binary image directly from the source image, without first producing a sparse approximation, and counting the number of connected components in this. The accuracy rate of this naive approach is 46\% with respect to the CNN. Algorithm \ref{algo:star_cluster} increases in accuracy to 74\% with respect to the CNN. The CNN accuracy rate is 86\% with respect to experts, but even experts agree with each other only around 70\%-75\% \cite{adamo, grasha, wei}. Given that experts are the baseline, it is impossible, without overfitting, for a computational model to do better than that. Therefore our method provides a very high performance given that no neural network training, which often takes weeks of compute time, is required. Additionally, the O.T. method is less sensitive to noise than a CNN, see \cite{zou}, which we describe and bound in Theorems \ref{thm:NoiseBound}, \ref{thm1}, and \ref{thm:robust}. Finally, with our method, variables can be simply added and removed where Equation \eqref{eq:sparseNeigh} is quickly recalculated. 
 
 We give the confusion matrix in Table \ref{table:2} from our calculations. We test on 128 random samples. The maximum Sinkhorn iterations is 500. The cost $C_{ij}$ is chosen as the $L^2$-distance between the $i^{th}$ pixel and $j^{th}$ pixel. The $H_0$ threshold is 0.75. The initial gradient descent step size is 0.001. Wasserstein parameter $\epsilon=0.001$. Sparsity parameter $\lambda=1$. When specifying the accuracy rates in the previous paragraph we use the classification results of the CNN in \cite{perez} as the definition of the correct classification. 
 
@@ -403,7 +398,7 @@ G. Peyré and M. Cuturi, ``Computational Optimal Transport: With Applications to
 M. Rawson and R. Balan, ``Convergence Guarantees for Deep Epsilon Greedy Policy Learning," arXiv:2112.03376, Dec. 2021.
 
 \bibitem{robinson} 
-M. Robinson and C. Capraro, ``Super-resolving star clusters with sheaves," arXiv:2106.08123, Jun. 2021.
+M. Robinson and C. Capraro, ``Super-resolving star clusters with sheaves," \emph{EURASIP J. Adv. Signal Process.}, no. 26, March 2022. 
 
 \bibitem{villani}
 C. Villani, \emph{Topics in optimal transportation}, vol. 58. Providence, RI: American Mathematical Society, 2003.
